@@ -20,8 +20,10 @@ pbuilder (0.161) UNRELEASED; urgency=low
   * New experimental implementation of PBUILDERSATISFYDEPENDSCMD,
     pbuilder-satisfydepends-experimental, which might help building packages
     targetted at experimental.
+  * Document usage of backports for a sarge pbuilder with cowdancer;
+    closes: #394710.
 
- -- Loic Minier <lool@dooz.org>  Mon,  6 Nov 2006 19:38:36 +0100
+ -- Loic Minier <lool@dooz.org>  Mon, 13 Nov 2006 20:03:13 +0100
 
 pbuilder (0.160) unstable; urgency=low
 
