@@ -1,3 +1,8 @@
+2006-11-13  Loic Minier <lool@dooz.org>
+
+	* Documentation/pbuilder-doc.xml: describe workaround of using
+	backports.org to use cowdancer for sarge; fixes #394710.
+
 2006-11-06  Loic Minier <lool@dooz.org>
 
 	* debuild-pbuilder, pbuilder-buildpackage-funcs, pdebuild-internal:
